--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,7 +2,7 @@ name: generate animation
 on:
   # run automatically every 6 hours
   schedule:
-    - cron: "0 */8 * * *" 
+    - cron: "2 * * * *" 
   
   # allows to manually run the job at any time
   workflow_dispatch:
